export const snapshot = {};

snapshot[`index.css 1`] = `
'@import "./red.css";
@import "./orange.css";
'
`;

snapshot[`red.css 1`] = `
":root {
  --red-50: #fefafa;
  --red-500: #fc8083;
}

@supports (color: oklch(0% 0 0)) {
  @media (color-gamut: p3) {
    :root {
      --red-50: oklch(0.988281 0.0046875 20);
      --red-500: oklch(0.742188 0.151562 20);
    }
  }
}
"
`;

snapshot[`orange.css 1`] = `
":root {
  --orange-100: #fff1eb;
}

@supports (color: oklch(0% 0 0)) {
  @media (color-gamut: p3) {
    :root {
      --orange-100: oklch(0.966797 0.0171875 43.3333);
    }
  }
}
"
`;
